@@ -1,3 +1,7 @@
+	* Improved the functionality of RSS.announce.  Calling it with
+	no arguments now lists the currently announced feeds.  Removing
+	feeds is done by specifying the --remove option.
+
 	* Added a reconnect command to the Owner plugin.  It won't work
 	for people using asyncoreDrivers, but those people should be few
 	and far between these days.
